layer can now be moved up and down with arrow button under layer panel

--- a/src/main/resources/templates/workspace.html
+++ b/src/main/resources/templates/workspace.html
@@ -141,7 +141,7 @@
                             <!--                            </li>-->
                         </ul>
                     </div>
-                    <div class="card-body" style="padding:unset;min-height: 256px;">
+                    <div class="card-body" style="padding:5px;min-height: 256px;">
                         <div class="tab-content mt-3">
                             <!--                            <div class="tab-pane active" id="Tileset#1" role="tabpanel">-->
                             <!--                                <input type="file" id="realBtn" hidden="hidden" onchange="addFirstTileset(this);">-->
@@ -153,7 +153,6 @@
                         </div>
                     </div>
                     <div class="card-footer form-inline">
-                        <!--                        wanna make these in one line-->
                         <h5 class="my-1 mr-lg-5">Tilesets</h5>
                         <!--                        <h5 class = "my-1 ml-lg-5 mr-lg-5"></h5>-->
                         <input type="file" id="fileBtn" hidden="hidden" onclick="this.value = null"
