--- a/src/main/resources/templates/workspace.html
+++ b/src/main/resources/templates/workspace.html
@@ -96,10 +96,10 @@
                                         <span aria-hidden="true">&times;</span>
                                     </button>
                                 </div>
-                                <div class="modal-body">
+                                <div class="modal-body"style="padding:0px !important;">
                                     <div class="my-drawing"></div>
                                 </div>
-                                <div class="modal-footer">
+                                <div class="modal-footer" style="padding:1rem !important;">
                                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
                                     <button type="button" class="btn btn-primary">Save Tileset</button>
                                 </div>
@@ -114,7 +114,27 @@
             </div>
             <div class="row iconrow">
                 <div class="col">
-                    <i class="fas fa-info-circle icon"></i>
+                    <i class="fas fa-info-circle icon" data-toggle="modal" data-target="#infoPopup"></i>
+
+                    <div class="modal fade" id="infoPopup" tabindex="-1" role="dialog" data-backdrop="static" aria-labelledby="infoPopupModal" aria-hidden="true">
+                        <div class="modal-dialog modal-xl" role="document">
+                            <div class="modal-content">
+                                <div class="modal-header" >
+                                    <h2 class="modal-title" id="infoPopupModal">INFORMATION TAB</h2>
+                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                        <span aria-hidden="true">&times;</span>
+                                    </button>
+                                </div>
+                                <div class="modal-body" style="padding:0px !important; overflow: auto">
+                                    <header th:insert="info.html :: information"></header>
+                                </div>
+                                <div class="modal-footer"style="padding:1rem !important;">
+                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Exit</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
                 <div class="col">
                     <i class="far fa-file-image icon"></i>
@@ -189,8 +209,8 @@
                         <input type="file" id="fileBtn" hidden="hidden" onclick="this.value = null"
                                onchange="addTileset(this);">
                         <div class="float-right ml-auto">
-                            <i class="fas fa-plus tileSetIcon" id="plusBtn"></i>
-                            <i class="fas fa-minus tileSetIcon" id="minusBtn"></i>
+                            <i href="#"class="fas fa-plus tileSetIcon" id="plusBtn"></i>
+                            <i href="#" class="fas fa-minus tileSetIcon" id="minusBtn"></i>
 <!--                            <a href="#" class="add-tileset float-right my-1 ml-lg-5" id="plusBtn"><span class="fas fa-plus"></span></a>-->
 <!--                            <a href="#" class="remove-tileset float-right my-1 ml-4" id="minusBtn"><span class="fas fa-minus"></span></a>-->
                         </div>
