shape fill tool is now available, it is only for tiled layer single tile selection is refreshed by discardActiveObject, this may cause unfocused single tile selection, happens randomly

--- a/src/main/resources/templates/workspace.html
+++ b/src/main/resources/templates/workspace.html
@@ -60,7 +60,7 @@
             </div>
             <div class="row iconrow">
                 <div class="col">
-                    <i class="fas fa-fill-drip icon"></i>
+                    <a href="#" id="shapeFillBtn"><i class="fas fa-fill-drip icon"></i></a>
                 </div>
                 <div class="col">
                     <i class="fas fa-download icon"></i>
