--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -20,7 +20,7 @@
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link th:href="@{/css/freelancer.min.css}" rel="stylesheet">
     <link th:href="@{/css/style.css}" rel="stylesheet">
-        literally canvas css and js
+<!--        literally canvas css and js-->
     <link th:href="@{/css/literallycanvas.css}" rel="stylesheet">
     <script src="js/literallycanvas.js"></script>
 <!--        <link th:href="@{/css/style_1.css}" rel="stylesheet">-->
