--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -9,7 +9,7 @@
 
 <body>
 
-<header th:insert="fragments.html :: nav"></header>
+<div th:insert="fragments.html :: nav"></div>
 
 <div class="container" style="max-width: 2000px ">
 
