--- a/src/main/resources/templates/mywork.html
+++ b/src/main/resources/templates/mywork.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-<header th:insert="fragments.html :: nav"></header>
+<div th:insert="fragments.html :: nav"></div>
 <!--Create New Poject Button-->
 <div class="card" style="width: 18rem; margin:auto; " data-toggle="modal" data-target="#exampleModalCenter">
     <img src="../images/plus.svg" class="card-img-top addButton" alt="...">
