--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -9,7 +9,7 @@
 
 <body class="profile">
 
-    <header th:insert="fragments.html :: nav"></header>
+    <div th:insert="fragments.html :: nav"></div>
 
     <div class="h-100 d-flex justify-content-center align-items-center">
         <div class="form-login-1">
