--- a/src/main/resources/templates/workspace.html
+++ b/src/main/resources/templates/workspace.html
@@ -226,9 +226,9 @@
 
     </div>
 </div>
-
 </div>
 
+<header th:insert="tileProperties.html :: tileProperties"></header>
 
 <!-- Optional JavaScript -->
 
@@ -238,10 +238,30 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
         integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
         crossorigin="anonymous"></script>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js" type="text/javascript"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js" type="text/javascript"></script>
+
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/fabric.js/3.6.2/fabric.min.js"></script>
+
+<script>
+
+    $("#propertyPanelModal").draggable({
+        handle: ".propertyPanelModalHeader"
+    });
+
+    $("button[data-number=1]").click(function () {
+        $('#propertyPanelModal').modal('hide');
+    });
+
+    $("button[data-number=2]").click(function () {
+        $('#addPropertyModal').modal('hide');
+    });
+</script>
+
 
 <script>
     var lc = LC.init(
