--- a/src/main/resources/templates/workspace.html
+++ b/src/main/resources/templates/workspace.html
@@ -260,6 +260,10 @@
     $("button[data-number=2]").click(function () {
         $('#addPropertyModal').modal('hide');
     });
+
+    $("button[data-number=3]").click(function () {
+        $('#addPropertyModal').modal('hide');
+    });
 </script>
 
 
