Users are now able to delete a property

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -178,5 +178,22 @@ body {
     height: 100%;
 }
 
+.propertyRow{
+    margin:0;
+}
+
+.propertyNameCol{
+    padding:0px;
+}
+
+.propertyValueCol{
+    padding-right: 0px;
+}
+
+.propertyDeleteCol{
+    padding: 0px;
+    font-size: 25px;
+    padding-left: 10px;
+}
 
 
