--- a/src/main/resources/templates/workspace.html
+++ b/src/main/resources/templates/workspace.html
@@ -9,6 +9,8 @@
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="../static/css/style.css"/>
 
+
+
     <title>Title</title>
 </head>
 <body>
@@ -51,9 +53,11 @@
             <!--            this is test icons-->
             <div class="row iconrow">
                 <div class="col">
+<!--                    <a href="#" id="undoBtn"></a>-->
                     <i class="fas fa-undo icon" id="undo"></i>
                 </div>
                 <div class="col">
+<!--                    <a href="#" id="redoBtn"></a>-->
                     <i class="fas fa-redo icon" id="redo"></i>
                 </div>
             </div>
@@ -229,7 +233,6 @@
 
 
 <!-- Optional JavaScript -->
-
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
         crossorigin="anonymous"></script>
@@ -240,6 +243,8 @@
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/fabric.js/3.6.2/fabric.min.js"></script>
+<!--    fabric history-->
+<!--<script src="js/fabric-history.js"></script>-->
 
 <!-- Optional JavaScript-->
 <script>
