--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -13,45 +13,51 @@
     <div class="form-login-1">
         <form th:action="@{/registration}" th:object="${user}" method="POST">
             <fieldset>
-            <div class = "row" id="row-1">
-                <div class = "col" id="login-col-1" >
-                    <img src="images/levelcreator_logo_1.png" class="logo-1">
+                <div th:if="${registerSuccess}" class="alert alert-success text-center" role="alert">
+                    <h5>You have been successfully registered</h5>
                 </div>
-                <div class = "col" id="login-col" >
-                    <span class = "reg-h4">Create Your Account</span>
-                    <br>
-                    <br>
-                    <div class="form-group form-inline">
-
-                        <input type="text" class="form-control input-sm chat-input" th:field="*{username}" id="Username" placeholder="Enter username">
-                        <p class="error-message"
-                           th:each="error: ${#fields.errors('username')}"
-                           th:text="${error}">Validation error</p>
+                <div th:if="${registerFail}" class="alert alert-danger text-center" role="alert">
+                    <h5>Fail to register, username or email address already exist</h5>
+                </div>
+                <div class = "row" id="row-1">
+                    <div class = "col" id="login-col-1" >
+                        <img src="images/levelcreator_logo_1.png" class="logo-1">
                     </div>
-                    <div class="form-group form-inline">
-
-                        <input type="email" class="form-control input-sm chat-input" th:field="*{email}" id="Email" placeholder="Enter email">
-                        <p class="error-message"
-                           th:each="error: ${#fields.errors('email')}"
-                           th:text="${error}">Validation error</p>
-                    </div>
-                    <div class="form-group form-inline">
-
-                        <input type="password" class="form-control input-sm chat-input" th:field="*{password}" id="password" placeholder="Enter password">
-                        <p class="error-message"
-                           th:each="error: ${#fields.errors('password')}"
-                           th:text="${error}">Validation error</p>
-                    </div>
-                    <div class="login-links">
-                        <span class="group-btn">
-                            <button type="submit" class="btn btn-primary btn-lg" id = "login-button">Submit</button>
-                        </span>
+                    <div class = "col" id="login-col" >
+                        <span class = "reg-h4">Create Your Account</span>
                         <br>
                         <br>
-                        <a href="/"> I change my mind -> </a>
+                        <div class="form-group form-inline">
+
+                            <input type="text" class="form-control input-sm chat-input" th:field="*{username}" id="Username" placeholder="Enter username">
+                            <p class="error-message"
+                               th:each="error: ${#fields.errors('username')}"
+                               th:text="${error}">Validation error</p>
+                        </div>
+                        <div class="form-group form-inline">
+
+                            <input type="email" class="form-control input-sm chat-input" th:field="*{email}" id="Email" placeholder="Enter email">
+                            <p class="error-message"
+                               th:each="error: ${#fields.errors('email')}"
+                               th:text="${error}">Validation error</p>
+                        </div>
+                        <div class="form-group form-inline">
+
+                            <input type="password" class="form-control input-sm chat-input" th:field="*{password}" id="password" placeholder="Enter password">
+                            <p class="error-message"
+                               th:each="error: ${#fields.errors('password')}"
+                               th:text="${error}">Validation error</p>
+                        </div>
+                        <div class="login-links">
+                            <span class="group-btn">
+                                <button type="submit" class="btn btn-primary btn-lg" id = "login-button">Submit</button>
+                            </span>
+                            <br>
+                            <br>
+                            <a href="/"> I change my mind -> </a>
+                        </div>
                     </div>
                 </div>
-            </div>
             </fieldset>
         </form>
     </div>
