Working on zoom.

--- a/src/main/resources/templates/workspace.html
+++ b/src/main/resources/templates/workspace.html
@@ -177,8 +177,7 @@
 
 
         <div class="col-8 middle">
-            <div class="box" id="canvasStorage"
-                 style="height:100%; width: 100%; position:relative; overflow: auto; background-color: gray;">
+            <div class="box" id="canvasStorage">
                 <canvas id="grid_canvas"></canvas>
             </div>
         </div>
@@ -329,7 +328,7 @@
     })
 </script>
 
-<!--<script src = "js/zoom.js"></script>-->
+<script src = "js/zoom.js"></script>
 <script src="js/tabs.js"></script>
 <!--<script src="js/addProject.js"></script>-->
 <script src="js/fabricNumberedImage.js"></script>
