--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -44,11 +44,14 @@ html, body {
 }
 
 .box {
-    background: #fff;
     border: 1px solid #999;
     border-radius: 3px;
-
-
+    height:900px;
+    width: 100%;
+    overflow: auto;
+    background-color: gray;
+    padding-top: 300px;
+    padding-bottom: 300px;
 }
 
 .canvas-container {
