Center map around middle

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -56,6 +56,7 @@ html, body {
 
 .canvas-container {
     margin: 0 auto;
+
 }
 
 
@@ -202,5 +203,16 @@ body {
     font-size: 25px;
     padding-left: 10px;
 }
-
-
+.canvasGird{
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    margin: auto;
+}
+/*#canvasContainerGrid{*/
+/*    position:absolute;*/
+/*    top:0;bottom:0;right:0;left:0;*/
+/*    margin:auto;*/
+/*}*/
