--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -44,21 +44,22 @@ html, body {
 }
 
 .box {
+    padding-top: 250px;
+    padding-bottom: 250px;
     border: 1px solid #999;
     border-radius: 3px;
-    height:900px;
-    width: 100%;
-    overflow: auto;
+    max-height: 900px;
+    max-width: 100%;
+    overflow: auto !important;
     background-color: gray;
-    padding-top: 300px;
-    padding-bottom: 300px;
-}
-
-.canvas-container {
+    position:relative;
     margin: 0 auto;
 
 }
 
+.canvas-container {
+    margin: 0 auto;
+}
 
 .tools {
     border: solid;
@@ -204,12 +205,14 @@ body {
     padding-left: 10px;
 }
 .canvasGird{
-    position: absolute;
+    transform-origin: center;
+    position:relative;
     top: 0;
     bottom: 0;
     right: 0;
     left: 0;
     margin: auto;
+
 }
 /*#canvasContainerGrid{*/
 /*    position:absolute;*/
