--- a/src/main/resources/templates/mywork.html
+++ b/src/main/resources/templates/mywork.html
@@ -38,19 +38,19 @@
 
                     <div class="form-group">
                         <label for="mapWidth">Map Width:</label>
-                        <input type="number" step="1" min="1" class="form-control" id="mapWidth" placeholder="Enter map width">
+                        <input type="number" step="1" min="1" max="100" class="form-control" id="mapWidth" placeholder="Enter map width">
                     </div>
                     <div class="form-group">
                         <label for="mapHeight">Map Height:</label>
-                        <input type="number" step="1" min="1" class="form-control" id="mapHeight" placeholder="Enter map height">
+                        <input type="number" step="1" min="1" max="100" class="form-control" id="mapHeight" placeholder="Enter map height">
                     </div>
                     <div class="form-group">
                         <label for="tileWidth">Tile Width:</label>
-                        <input type="number" step="1" min="1" class="form-control" id="tileWidth" value="32" placeholder="Enter tile width">
+                        <input type="number" step="1" min="1"  max="100" class="form-control" id="tileWidth" value="32" placeholder="Enter tile width">
                     </div>
                     <div class="form-group">
                         <label for="tileHeight">Tile Height:</label>
-                        <input type="number" step="1" min="1" class="form-control" id="tileHeight" value="32" placeholder="Enter tile height">
+                        <input type="number" step="1" min="1"  max="100" class="form-control" id="tileHeight" value="32" placeholder="Enter tile height">
                     </div>
 
                     <div class="modal-footer">
