--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,4 +1,3 @@
-
 html, body {
     height: 100%;
 }
@@ -44,22 +43,21 @@ html, body {
 }
 
 .box {
-    padding-top: 250px;
-    padding-bottom: 250px;
     border: 1px solid #999;
     border-radius: 3px;
-    max-height: 900px;
-    max-width: 100%;
-    overflow: auto !important;
+    height:900px;
+    width: 100%;
+    overflow: auto;
     background-color: gray;
-    position:relative;
-    margin: 0 auto;
-
+    padding-top: 300px;
+    padding-bottom: 300px;
 }
 
 .canvas-container {
     margin: 0 auto;
+
 }
+
 
 .tools {
     border: solid;
@@ -205,14 +203,12 @@ body {
     padding-left: 10px;
 }
 .canvasGird{
-    transform-origin: center;
-    position:relative;
+    position: absolute;
     top: 0;
     bottom: 0;
     right: 0;
     left: 0;
     margin: auto;
-
 }
 /*#canvasContainerGrid{*/
 /*    position:absolute;*/
