Fixed preview and save image for zoom

--- a/src/main/resources/templates/workspace.html
+++ b/src/main/resources/templates/workspace.html
@@ -176,9 +176,9 @@
         </div>
 
 
-        <div class="col-8 middle">
+        <div class="col-8 middle" style="height: 900px">
             <div class="box" id="canvasStorage"
-                 style="height:900px; width: 100%; position:relative; overflow: auto; background-color: gray;">
+                 style="height:100%; width: 100%; position:relative; overflow: auto; background-color: gray;">
                 <div class="canvasGird" id="testGirdy">
                     <canvas id="grid_canvas" class="text-center"></canvas>
 
