database fixing up

--- a/src/main/resources/templates/workspace.html
+++ b/src/main/resources/templates/workspace.html
@@ -34,14 +34,14 @@
                 </div>
             </div>
             <!--            this is test icons-->
-            <div class="row iconrow">
-                <div class="col">
-                    <a href="#" id="lockBtn"><i class="fas fa-lock icon"></i></a>
-                </div>
-                <div class="col">
-                    <a href="#" id="unlockBtn"><i class="fas fa-lock-open icon"></i></a>
-                </div>
-            </div>
+<!--            <div class="row iconrow">-->
+<!--                <div class="col">-->
+<!--                    <a href="#" id="lockBtn"><i class="fas fa-lock icon"></i></a>-->
+<!--                </div>-->
+<!--                <div class="col">-->
+<!--                    <a href="#" id="unlockBtn"><i class="fas fa-lock-open icon"></i></a>-->
+<!--                </div>-->
+<!--            </div>-->
 <!--            <div class="row iconrow">-->
 <!--                <div class="col">-->
 <!--                    <a href="#" id="trasBtn"><i class="fas fa-eye-slash icon"></i></a>-->
